# cloverIDE

./: .gitignore  CHANGELOG.md  Makefile  README.md  Readme.md  _sidebar.md  copter_status.md  index.html
.github/workflows/: build.yml  docs.yml  main.yml
catkin_ws/src/cloveremu/: CMakeLists.txt  Readme.md  package.xml  setup.cfg
catkin_ws/src/cloveremu/launch/: full.launch
catkin_ws/src/cloveremu/msg/: ExampleTopicMsg.msg
catkin_ws/src/cloveremu/srv/: ExampleServiceSrv.srv
catkin_ws/src/fakeclover/: Readme.md  package.xml
catkin_ws/src/fakeclover/msg/: IFBS.msg
catkin_ws/src/fakeclover/src/: emu
cloverExtension/: .vscodeignore  package.json  regeneratePJ.ts  roslibCBOR.js  tsconfig.json  webpack.config.js  webpack.config.ts
cloverExtension/src/: battery.css  common.css  common.ts  copterActions.ts  extension.ts  global.d.ts  tools.ts  tree.ts  uipanel.ts  useMav.ts  useVSState.ts  vscode.ts
cloverExtension/src/components/: Choose.tsx  Cloversim.tsx  ImageTopic.tsx  Service.tsx  Topic.tsx  choose.css
cloverExtension/src/opencv/: index.ts
cloverExtension/src/ros/: builtinTypes.ts  (+3 more)
cloveride/: config.yaml  package.json  webpack.config.js
cloveride/src/: extension.ts  global.d.ts  tools.ts  tree.ts  vscode.ts
coder/: Makefile  config.yaml  package.json
coder/certs/: cert.ext
docs/: README.md  _sidebar.md  ide.md  index.html  install.md  install_ide.md  prestart.md  pylib.md  ros.md  start.md  usage.md
docs/ide/: ros.md  usage.md
ide/: Makefile  package.json  proxy.js  run.sh  src.patch
ideHttps/: Makefile  go.mod  main.go
idePlugins/: download.py  externalPlugins.json
package/: Makefile
pylib/: __init__.py  image.py  main.py  navigator.py  serviceProxies.py  tf2transformer.py
(+62 files in other folders)
