<?xml version="1.0"?>
<package format="2">
  <name>cloveremu</name>
  <version>1.0.0</version>
  <description>Fake clover, is special tool to create fake clover services, for debug clover ide</description>

  <maintainer email="mrom06@ya.ru">max</maintainer>
  <license>MIT</license>
  <author email="mrom06@ya.ru">max</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
